<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bod_red_flower">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </android.support.v7.widget.Toolbar>
    ]
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bod_signin_bcg"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:src="@mipmap/logo_open_t_piconly" />

        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--验证码-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_check_postlay_band"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_sign_up_checkword_band"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/checkword"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/phone_check_btn_band"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="2"
                    android:background="@color/bod_red_flower"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/checkword_btn"
                    android:textColor="@android:color/white"
                    tools:ignore="HardcodedText" />


            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_finish_band"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/bod_red_flower"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/checkfinish_btn"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>