<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bod_red_flower">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bod_signin_bcg">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            android:background="@color/bod_signin_bcg">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@mipmap/logo_open_t_piconly"/>

            <!--用户名-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_in_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/xing_ming"
                    android:inputType="textPersonName"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/bod_red_flower"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_link_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/no_accont"
                android:textSize="16sp"
                android:textColor="@color/bod_pink"
                tools:ignore="HardcodedText" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_phone_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/phone_sign_in"
                android:textSize="16sp"
                android:textColor="@color/bod_pink"
                tools:ignore="HardcodedText" />


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_sign_in_wechat"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="{fa-weixin}"
                android:textColor="@color/bod_jiezi"
                android:textSize="40sp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_sign_in_qq"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="{fa-qq}"
                android:textColor="@color/bod_qq"
                android:textSize="40sp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_sign_in_weibo"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="{fa-weibo}"
                android:textColor="@color/bod_weibo"
                android:textSize="40sp" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.LinearLayoutCompat>